# sowback

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup-zsh.sh
.github/workflows/: binary.yml
docs/: README.md
src/: client.rs  config.rs  crypto.rs  logging.rs  main.rs  protocol.rs  proxy.rs  server.rs  utils.rs
src/cli/: mod.rs
src/client/: mod.rs
src/config/: mod.rs
src/logging/: console.rs  formatter.rs  logger.rs  macros.rs  mod.rs
src/server/: mod.rs
src/utils/: crypto.rs  frame_reader.rs  mod.rs  protocol.rs
